# webots-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bindings-generator/: Cargo.toml
bindings-generator/src/: main.rs
headers/2025a/: wrapper.h
src/: lib.rs
src/v2025a/: bindings.rs  mod.rs  supervisor.rs  webots.rs
src/v2025a/device/: accelerometer.rs  altimeter.rs  battery_sensor.rs  brake.rs  camera.rs  compass.rs  connector.rs  distance_sensor.rs  emitter.rs  gps.rs  gyro.rs  inertial_unit.rs  led.rs  lidar.rs  light_sensor.rs  microphone.rs  mod.rs  motor.rs  position_sensor.rs  radar.rs  radio.rs  range_finder.rs  receiver.rs  speaker.rs  touch_sensor.rs  touch_sensor3d.rs  vacuum_gripper.rs
