[package]
name = "webots-rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings and wrappers for the Webots controller API"
documentation = "https://docs.rs/webots"
homepage = "https://github.com/jBernavaPrah/webots-rs"
repository = "https://github.com/jBernavaPrah/webots-rs"
readme = "README.md"
keywords = ["webots", "robotics", "simulation", "ffi"]
categories = ["api-bindings", "science::robotics", "simulation"]
exclude = [".idea/**", "bindings-generator/**"]

[workspace]
members = ["bindings-generator"]
resolver = "2"

[package.metadata.docs.rs]
no-default-features = false
features = ["v2025a"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derive-new = "0.7.0"
derive_setters = "0.1.9"
thiserror = "2.0.18"
libc = "0.2"

[features]
default = ["v2025a"]
v2025a = []
